base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample
  name: sample
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample
  type: ClusterIP
